--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath 'me.tatarka:gradle-retrolambda:3.2.4'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath "io.realm:realm-gradle-plugin:2.3.0"
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
