--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
@@ -77,6 +76,6 @@ dependencies {
     annotationProcessor 'com.github.stephanenicolas.toothpick:toothpick-compiler:1.0.3'
     testCompile 'com.github.stephanenicolas.toothpick:toothpick-testing:1.0.3'
 
-    //todo jacoco
-    //todo stetho
+    debugCompile 'com.facebook.stetho:stetho:1.4.2'
+    debugCompile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
 }
